--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,13 +1,10 @@
-<h1>Mi web personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-  <li><a href="/">Portada</a></li>
-  <li><a href="/about-me/">Acerca de</a></li>
-  <li><a href="/portfolio/">portafolio</a></li>
-  <li><a href="/contact/">Contacto</a></li>
-</ul> 
+{% block tittle %}Acerca de{% endblock %}
 
-<h2>Acerca de </h2>
-    
-<P>Me llamo luz y soy programadora</p>
-    
+{% block content %}
+<h2>Acerca de</h2>
+
+
+<p>Me llamo luz y soy programadora</p)
+{% endblock %}
