--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,12 +1,10 @@
-<h1>Mi web personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-  <li><a href="/">Portada</a></li>
-  <li><a href="/about-me/">Acerca de</a></li>
-  <li><a href="/portfolio/">portafolio</a></li>
-  <li><a href="/contact/">Contacto</a></li>
-</ul> 
+{% block tittle %}Portada{% endblock %}
 
+{% block content %}
 <h2>Portada</h2>
 
+
 <p>Esto es la portada</p)
+{% endblock %}
