--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -1,14 +1,13 @@
-<h1>Mi web personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-  <li><a href="/">Portada</a></li>
-  <li><a href="/about-me/">Acerca de</a></li>
-  <li><a href="/portfolio/">portafolio</a></li>
-  <li><a href="/contact/">Contacto</a></li>
-</ul> 
+{% block tittle %}Contacto{% endblock %}
 
+{% block content %}
 <h2>Contacto</h2>
 
+
 <p>Aqui les dejo mi e-mail para preguntarme dudas: 
-  <a href="malto:hola@luz.net">hola@luz.net</a>
+   <a href="malto:hola@luz.net">hola@luz.net</a>
+
 </p>
+{% endblock %}
