--- a/core/templates/core/portfolio.html
+++ b/core/templates/core/portfolio.html
@@ -1,12 +1,10 @@
-<h1>Mi web personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-  <li><a href="/">Portada</a></li>
-  <li><a href="/about-me/">Acerca de</a></li>
-  <li><a href="/portfolio/">portafolio</a></li>
-  <li><a href="/contact/">Contacto</a></li>
-</ul> 
+{% block tittle %}Portafolio{% endblock %}
 
-<h2>portafolio</h2>
+{% block content %}
+<h2>Portafolio</h2>
 
-<p>algunos de mis trabajos</p)
+
+<p>Algunos de mis trabajos</p)
+{% endblock %}
