--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -2,9 +2,11 @@
 
 {% block tittle %}Portada{% endblock %}
 
-{% block content %}
-<h2>Portada</h2>
+{%block background%}{% load static %}{% static 'core/img/home-bg.jpg'%}{% endblock %} 
 
-
-<p>Esto es la portada</p)
+ {% block headers %}
+ <h1>Luz Rosales</h1>
+ <span class="subheading">Ingeniera en tecnologias</span>
 {% endblock %}
+
+
