--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{% block titl %}{% endblock %}  | Luz Rosales </title>
+    <title>{% block titl %}{% endblock %}  |Luz Rosales </title>
 
     <!-- Estilos y fuentes del template  -->
     {% load static %}
-    <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' % }" rel="stylesheet">
+    <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'core/vendor/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="{% static 'core/vendor/css/clean-blog.min.css'%}" rel="stylesheet">
+    <link href="{% static 'core/css/clean-blog.min.css' %}" rel="stylesheet">
 
   </head>
 
@@ -23,39 +23,39 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'home'% }">Luz Rosales</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Luz Roche</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          
           Menú
-          <i class="fa fa-bars"></i>
+       <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home'% }">Portada</a>
+              <a class="nav-link" href="{% url 'home' %}">Portada</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'about'% }">Acerca de</a>
+              <a class="nav-link" href="{% url 'about' %}">Acerca de</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'portfolio'% }">Portafolio</a>
+              <a class="nav-link" href="{% url 'portfolio' %}">Portafolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact'% }">Contacto</a>
+              <a class="nav-link" href="{% url 'contact' %}">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
     <!-- Cabecera -->
-    <header class="masthead" style="background-image: url('{% static 'core/img/home-bg.jpg'%}')">
+    <header class="masthead" style="background-image: url('{% block background %}{% endblock %}')">
     <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Luz Rosales</h1>
-              <span class="subheading">Ingeniera en tecnologias</span>
+              {% block headers %}{% endblock %}
+             
             </div>
           </div>
         </div>
@@ -63,7 +63,14 @@
     </header>
 
     <!--contenido-->
-    {% block content %}{% endblock %}
+    <div class="container">
+      {% block content %}{% endblock %} 
+      </div>  
+    
+     {% if request.path != "/" %}<hr> {% endif %}
+
+    
+
     <!-- Pié de página -->
     <footer>
       <div class="container">
