--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -2,12 +2,20 @@
 
 {% block tittle %}Contacto{% endblock %}
 
+{%block background%}{% load static %}{% static 'core/img/contact-bg.jpg'%}{% endblock %} 
+
+ {% block headers %}
+  <h1>Contacto</h1>
+  <span class="subheading">Asesoria</span>
+{% endblock %}
+
 {% block content %}
-<h2>Contacto</h2>
-
-
-<p>Aqui les dejo mi e-mail para preguntarme dudas: 
-   <a href="malto:hola@luz.net">hola@luz.net</a>
-
-</p>
+<div class="row">  
+<div class="col-lg-8 col-md-10 mx-auto">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+          <br>
+          <p><b>Teléfono:</b> +09 876 543 210</p>
+          <p><b>Honorarios:</b> 60€/h (precio base)</p>
+        </div>
+       </div>  
 {% endblock %}
